# manipulator_perception

./: README.md  package.xml  setup.cfg  setup.py
config/: calibration  camera_info.yaml  params.yaml  rviz_cam.rviz
launch/: camera.launch.py  detection.launch.py
manipulator_h_vision/: track_circle.py
ring_tracker/: README.md  package.xml  ring_detector.py  ring_tracking_node.py  setup.cfg  test_calibration.py  track_circle.py
ring_tracker/config/: camera_info and calibration.md  params.yaml
ring_tracker_interface/: CMakeLists.txt  package.xml
ring_tracker_interface/srv/: MoveCamera.srv
